<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ScreenCast TV</string>
    <string name="waiting_for_connection">Waiting for connection…</string>
    <string name="cast_instructions">Cast a video from your iPhone or Android device</string>
    <string name="notification_channel_name">Casting Service</string>
    <string name="notification_title">ScreenCast TV is running</string>
    <string name="notification_text">Ready to receive video casts</string>
    <string name="settings_title">Settings</string>
    <string name="settings_button">Settings</string>
    <string name="setting_device_name">Device Name</string>
    <string name="setting_subtitle_size">Subtitle Size</string>
    <string name="setting_auto_start">Auto-start on Boot</string>
</resources>
